# weather-provider-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  PROJECT_GOVERNANCE.md  PROJECT_GOVERNANCE.rst  README.md  README.rst  SECURITY.md  SECURITY.rst  app_config.py  catalog-info.yaml  coverage.xml  index.html  openapi.json  pyproject.toml  requirements.txt  setup.py  sigrid.yaml  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  codeql.yml  docker-publish.yml  github-pages-deployment.yml  publish-image.yml  pull-request-workflow.yml  python-app.yml  python-package.yml  release-candidate-workflow.yml  v2_pytest_versions.yml  v2_test_supported_versions.yml  v3-temporary-docker-publish.yml  version-update-workflow.yml  version_release_to_pypi.yml
LICENSES/: Apache-2.0.txt  CC-BY-2.5.txt  LICENSE.Apache-2.0  MPL-2.0.txt
_build/: .buildinfo  genindex.html  index.html  introduction.html  modules.html  objects.inv  quick-start.html  search.html  searchindex.js  weather_provider_api.core.exceptions.html  weather_provider_api.core.handlers.html  weather_provider_api.core.html  weather_provider_api.core.utils.html  weather_provider_api.html  weather_provider_api.routing.api_models.html  weather_provider_api.routing.api_models.input.html  weather_provider_api.routing.api_models.output.html  weather_provider_api.routing.html  weather_provider_api.routing.versions.html  weather_provider_api.routing.views.common.html  weather_provider_api.routing.views.health.html  weather_provider_api.routing.views.html  weather_provider_api.routing.views.supporting.html  weather_provider_api.routing.views.v2_specific.html  weather_provider_api.routing.views.v3_specific.html  xarray_formatting.html
app/: main.py
app/versions/: v1.py  v2.py
config/: config.yaml
demos/: demo_cds_era5sl.py  demo_knmi_actuele_waarnemingen.py  demo_knmi_daggegevens.py  demo_knmi_harmonie_arome.py  demo_knmi_pluim.py  demo_knmi_uurgegevens.py  run_weather_api.ipynb
doc/: factors.md  usage.md
doc/copyright_profiles/: velocity_copyright_text.txt
docs/: .buildinfo  api.html  api_and_library_usage.md  config.html  genindex.html  glossary.html  index.html  libraries.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  standardization.md  wpla.api.core.exceptions.html  wpla.api.core.html  wpla.api.core.initializers.html  wpla.api.html  wpla.api.routers.html  wpla.api.versions.html  wpla.config.html  wpla.html  wpla.libraries.exceptions.html  wpla.libraries.html  wpla.libraries.utils.html
docs/Tutorials/: creating_your_own_model_or_source.md
docs/_modules/: index.html
docs/_sources/: api.rst.txt  glossary.rst.txt  libraries.rst.txt  wpla.api.versions.rst.txt
docs/_static/: documentation_options.js
docs/puml/: WeatherModelBase.puml
docs/sphinx-docs/: conf.py  index.rst  introduction.rst  modules.rst  quick-start.rst  weather_provider_api.core.exceptions.rst  weather_provider_api.core.handlers.rst  weather_provider_api.core.rst  weather_provider_api.core.utils.rst  weather_provider_api.routing.api_models.input.rst  weather_provider_api.routing.api_models.output.rst  weather_provider_api.routing.api_models.rst  weather_provider_api.routing.rst  weather_provider_api.routing.versions.rst  weather_provider_api.routing.views.common.rst  weather_provider_api.routing.views.health.rst  weather_provider_api.routing.views.rst  weather_provider_api.routing.views.supporting.rst  weather_provider_api.routing.views.v2_specific.rst  weather_provider_api.routing.views.v3_specific.rst  weather_provider_api.rst  xarray_formatting.rst
img/: gitflow.svg.license
scripts/: erase_arome_repository.py  erase_era5sl_repository.py  update_arome_repository.py  update_era5sl_repository.py
sphinx/source/: conf.py  config.rst  index.rst  modules.rst  readme.rst  wpla.api.core.exceptions.rst  wpla.api.core.initializers.rst  wpla.api.core.rst  wpla.api.routers.rst  wpla.api.rst  wpla.config.rst  wpla.libraries.exceptions.rst  wpla.libraries.rst  wpla.libraries.utils.rst  wpla.rst
src/weather_provider_api/: __main__.py  app.py  configuration.py
tests/: conftest.py  pytest.ini  test_api_models.py  test_api_view_v1.py  test_cds_era5sl_model.py  test_cds_era5sl_repository.py  test_config_utils.py  test_configuration.py  test_date_helpers.py  test_downloader.py  test_error_handling.py  test_geo_position.py  test_grid_helpers.py  test_knmi_actuele_waarnemingen.py  test_knmi_arome_model.py  test_knmi_arome_repository.py  test_knmi_daggegevens.py  test_knmi_pluim.py  test_knmi_uurgegevens.py  test_model.py  test_serializers.py  test_weather_alert.py
tests/unit-tests/: test_api_exceptions.py  test_configuration.py  test_configurations.py  test_exception_handling.py
var_maps/: arome_var_map.json  era5land_var_map.json  era5land_var_map.json.license  era5sl_var_map.json
weather_provider_api/: __init__.py  __main__.py  app_config.py  app_version.py  main.py
weather_provider_api/app/: main.py
weather_provider_api/config/: __init__.py  base.py  config.toml  debug.py  deployed.py  development.py
weather_provider_api/core/: __init__.py  application.py  base_model.py  gunicorn_application.py  views.py
weather_provider_api/scripts/: erase_arome_repository.py  erase_era5land_repository.py  erase_era5sl_repository.py  erase_waarnemingen_register.py  update_arome_repository.py  update_era5land_repository.py  update_era5sl_repository.py  update_waarnemingen_register.py
weather_provider_api/tests/: conftest.py  pytest.ini  test_api_models.py  test_api_view_v1.py  test_cds_era5sl_model.py  test_cds_era5sl_repository.py  test_controller.py  test_date_helpers.py  test_downloader.py  test_geo_position.py  test_knmi_actuele_waarnemingen.py  test_knmi_arome_model.py  test_knmi_arome_repository.py  test_knmi_daggegevens.py  test_knmi_pluim.py  test_knmi_uurgegevens.py  (+3 more)
wpa_config/: config.toml
wpla/: __init__.py  api_main.py  configuration.py  main_api_run.py
(+247 files in other folders)
