[tool.poetry]
name = "weather_provider_api"
version = "2.48.0"
description = "Weather Provider Libraries and API"
authors = ["Verbindingsteam", "Raoul Linnenbank <58594297+rflinnenbank@users.noreply.github.com>"]
license = "MPL-2.0"
readme = "README.md"
repository="https://github.com/alliander-opensource/wpla/"
include = [
    {path = "var_maps/*.json", format = "wheel"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.104.1"
requests = "^2.31.0"
geopy = "^2.3.0"
numpy = "^1.26.2"
gunicorn = "^21.2.0"
lxml = "^4.9.1"
starlette-prometheus = "^0.9.0"
beautifulsoup4 = "^4.12.2"
netcdf4 = "^1.6.5"
tomli = "^2.0.1"
pandas = "^2.1.3"
xarray = "^2023.11"
cfgrib = "^0.9.10.4"
uvicorn = "^0.24.0.post1"
slowapi = "^0.1.7"
loguru = "^0.7.2"
email-validator = "^2.1.0.post1"
eccodes = "^1.6.1"
ecmwflibs = "0.5.1"
accept-types = "^0.4.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
isort = "^5.10.1"
pylint = "^2.15.10"
black = "^23.10.1"

[tool.poetry.scripts]
wpla_update_era5sl = "weather_provider_api.scripts.update_era5sl_repository:main"
wpla_update_era5land = "weather_provider_api.scripts.update_era5land_repository:main"
wpla_update_arome = "weather_provider_api.scripts.update_arome_repository:main"
wpla_update_waarnemingen = "weather_provider_api.scripts.update_waarnemingen_register:main"
wpla_clear_era5sl = "weather_provider_api.scripts.erase_era5sl_repository:main"
wpla_clear_era5land = "weather_provider_api.scripts.erase_era5land_repository:main"
wpla_clear_arome = "weather_provider_api.scripts.erase_arome_repository:main"
wpla_clear_waarnemingen = "weather_provider_api.scripts.erase_waarnemingen_register:main"
wpla_run_api = "weather_provider_api.main:main"

[tool.pylint]
max-line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

